# gbsed

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
config/: depcomp
devel/: build_doc.sh  reconf  similarity
doc/: libgbsed.doc
m4/: Makefile.am  Makefile.in
man/: Makefile.am  Makefile.in  gbsed.1  libgbsed.3
osx/Package/: Build.sh  gbsed.pmproj
osx/Package/DStore/: DS_Store
osx/Package/Extras/: License.rtf  ReadMe.rtf.template  Readme.rtf  Welcome.rtf  Welcome.rtf.template
osx/Package/Root/usr/man/man1/: gbsed.1
osx/Package/Root/usr/man/man3/: libgbsed.3
src/: Makefile.am  Makefile.in
src/gbsed/: Makefile.am  Makefile.in  gbsed.c
src/libgbsed/: Makefile.am  Makefile.in  libgbsed.c  libgbsed.h
